# prosekernel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LIBRARY.md  LICENSE  README.md  ROADMAP.md  SKILL.md  pyproject.toml
docs/: ANTI_SLOP_CHECKLIST.md  WRITING_SYSTEM.md  agent-workflow.md  annotation-guide.md  anti-slop.md  doctrine.md  editorial-architecture.md  example-quality-rubric.md  github-release-settings.md  install.md  legal-source-policy.md  pattern-schema.md  phase-10-productized-cli.md  phase-11-public-safe-learning-loop.md  phase-12-human-review-import-bridge.md  phase-6-brief-mode.md  phase-6b-provider-write.md  phase-7a-evals.md  phase-8-hybrid-retrieval.md  phase-9-agent-workflow.md  public-release-checklist.md  public-release-readiness.md  release-process.md  retrieval-writing-demo.md  source-ingestion.md  taxonomy.md  v1-definition-of-done.md
evals/: writing-scorecard.md
examples/: ai-slop-sample.md  ai-structure-sample.md  human-structure-sample.md
patterns/: PATTERN_BRAND_001-worldview-positioning.md  PATTERN_CRISIS_001-impact-timeline-cause-prevention.md  PATTERN_EMAIL_001-promised-cadence.md  PATTERN_EXPLAIN_001-progressive-disclosure.md  PATTERN_HOOK_001-portable-distinction.md  PATTERN_INTERNAL_001-explicit-ownership-operating-doc.md  PATTERN_PERSUASION_001-awareness-matched-argument.md  PATTERN_PROOF_001-specific-proof-ladder.md  PATTERN_REPORTAGE_001-scene-to-system-accountability.md  PATTERN_SPEECH_001-shared-principle-renewed-duty.md  PATTERN_STRATEGY_001-decision-grade-principles.md  PATTERN_UX_001-actionable-recovery-microcopy.md  endings.md  hooks.md  narrative-frames.md  objection-handling.md  openings.md  proof.md  transitions.md
prompts/: agent-workflow.md  critique.md  editor.md  editor.system.md  library-retriever.md  rewrite.md  style-transfer.md  writer.md  writer.system.md  writing-brief.md
scripts/: public_demo.sh
(+65 files in other folders)
