[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanprint"
version = "0.1.0"
description = "AI writing system for clear, specific, non-sloppy prose."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gamer" }]
license = { text = "Private" }

[project.scripts]
humanprint = "humanprint.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
