[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosekernel"
version = "0.2.0"
description = "An open-source taste engine for AI writing agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ProseKernel contributors" }]
license = { text = "MIT" }

[project.scripts]
prosekernel = "prosekernel.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/teojh9413/prosekernel"
Repository = "https://github.com/teojh9413/prosekernel"
Issues = "https://github.com/teojh9413/prosekernel/issues"
